# mist-transfer-benchmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
configs/: experiment_matrix.toml  live_demo_v1.toml  qm9_28m.toml  qm9_extended_comparison_v1.toml  qm9_fixed_split_evaluation_v2.toml  qm9_mlp_monitoring_preflight.toml  qm9_paper_evaluation_smoke.toml  qm9_paper_evaluation_v1.toml  smoke.toml
data/fixtures/: NOTICE  README.md  redox_tiny.csv  redox_tiny_internal.csv
docs/: data_card_template.md  data_contract.md  experiment_matrix.md  leakage_controls.md  live_demo_client_contract.md  live_demo_v1_process.md  mist_integration.md  qm9_28m_benchmark_process.md  qm9_28m_data_card.md  qm9_28m_results.md  qm9_extended_comparison_v1.md  qm9_fixed_split_v2_live_tasks.md  qm9_fixed_split_v2_protocol.md  qm9_paper_evaluation_v1.md  reproducibility.md
results/: README.md
scripts/: build_demo_data.py  build_live_demo_bundle.py  build_qm9_loss_report.py  build_qm9_results.py  build_qm9_traditional_ensemble_correction.py  prepare_qm9_paper_features.py  review_qm9_fixed_split.py  run_qm9_extended_comparison.py  run_qm9_fixed_split_evaluation.py  run_qm9_paper_evaluation.py
site/: app.js  demo-data.json  index.html  live-api.js  live-config.js  qm9-results.json  styles.css
tests/: __init__.py  conftest.py  test_baseline.py  test_cli.py  test_cohort.py  test_live_demo_api.py  test_live_demo_bundle.py  test_qm9_extended_comparison.py  test_qm9_results_summary.py  test_schema.py  test_site.py  test_splits.py
(+66 files in other folders)
