[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mist-transfer-benchmark"
version = "0.1.1"
description = "Leakage-aware benchmarks for testing transfer from molecular pretraining"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "mist-transfer-benchmark contributors" }]
keywords = [
  "chemistry",
  "molecular-property-prediction",
  "redox-potential",
  "scientific-foundation-models",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "rdkit>=2024.3.5",
  "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "pytest-cov>=5",
  "ruff>=0.9",
]

[project.scripts]
mist-transfer = "mist_transfer_benchmark.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/mist_transfer_benchmark"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
